--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 table td, table th{
-	padding: 5px;
+		padding: 5px;
 }
 
 
@@ -12,10 +12,12 @@ label {
 		font-weight: bold;
 }
 input[type=submit]{
-	background: #008000;
+		background: #008000;
 		color: #fff;
+		margin-left: 10px;
 		cursor: pointer;
 		padding: 10px;
+		border: 0;
 		font-size: 15px;
 }
 
@@ -38,6 +40,7 @@ input[type=submit]:hover{
 		width: 150px;
 		background: #FFEC6D;
 		margin: 10px;
+		cursor: pointer;;
 		padding: 10px;
 		display: inline-block;
 }
